# txllm-nodes

./: .gitignore  README.md
attention/: .profile  CMakeLists.txt  Makefile  layer_attention.cpp  test_attention.py
attention/backend/: attention.cpp  attention.h  attention_kernel.cu  attention_kernel.h  kvcache.cpp  kvcache.h  linear.cpp  model.h  model_config.h  model_context.cpp  model_context.h  rotary_embedding.cu  rotary_embedding.h  transformer_buffer.cu  transformer_buffer.h
embedding/: CMakeLists.txt  Makefile  layer_embedding.cpp  readme.md  test_embedding.py
embedding/backend/: CMakeLists.txt  embedding.cpp  embedding.cu  embedding.h  model_utils.cu
feedforward/: CMakeLists.txt  Makefile  layer_feedforward.cpp  test_feedforward.py
feedforward/backend/: CMakeLists.txt  activation_kernel.cu  feedforward.cpp  feedforward.h  layer_feedforward.cpp  linear.cpp  linear.h  model_config.h  utils.h
feedforward/bmengine/bmengine/include/bmengine/core/: layer.h
linear/: .profile  CMakeLists.txt  Makefile  layer_linear.cpp  test_linear.py
linear/backend/: CMakeLists.txt  activation_kernel.h  layer_base.h  layer_linear.cpp  linear.cpp  linear.h  linear_base.h  py_utils.cpp  py_utils.h  utils.cpp  utils.cu  utils.h
linear/bmengine/: CMakeLists.txt
linear/bmengine/bmengine/core/: layer.cpp
llama/: CMakeLists.txt  Makefile  bug.cpp
llama/backend/: activation_kernel.cu  activation_kernel.h  allocate_utils.h  attention.cpp  attention.h  attention_base.h  attention_kernel.cu  attention_kernel.h  batch_generator.cpp  batch_generator.h  beam_buffer_manager.h  beam_result_manager.h  beam_util.cu  beam_util.h  block.cpp  block.h  block_kernel.cu  block_kernel.h  buffer_context.cpp  buffer_context.h  dyn_batch_context.h  embedding.cu  embedding.h  feedforward.cpp  feedforward.h  generator.h  host_all_reducer.cpp  kvcache.cpp  kvcache.h  layernorm.cu  layernorm.h  linear.cpp  linear.h  llama.cpp  llama.h  lru_cache.h  matrix.h  model.h  model_context.cpp  model_context.h  (+10 more)
llama/bmengine/bmengine/: CMakeLists.txt
llama/bmengine/bmengine/core/: context.cpp  layer.cpp
llama/bmengine/bmengine/include/bmengine/core/: layer.h
llama/llama/: dynamic_batch.py  llama.py  loader.py  quant.py  script.py  test_llama.py  test_llama2.py  test_tinyllama.py
llama/py_export/: bind.cpp  bind.h  py_batch_generator.cpp  py_llama.cpp  py_model_base.cpp  py_model_base.h  py_utils.cpp  py_utils.h
